--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,10 +51,6 @@ omit = ["tests/*"]
 branch = true
 
 
-[tool.black]
-line-length = 100
-target-version = ['py310']
-skip-string-normalization = true
 
 
 [tool.ruff]
@@ -84,10 +80,12 @@ exclude = [
     "venv",
 ]
 per-file-ignores = {}
-# E402: module level import not at top of file
-# E501: line too long - let black worry about that
-# E731: do not assign a lambda expression, use a def
-ignore = ["E402", "E501", "E731"]
+ignore = [
+    "E721", # Comparing types instead of isinstance
+    "E741", # Ambiguous variable names
+    "E501", # Conflicts with ruff format
+    "W191", # Conflicts with ruff format
+]
 select = [
     # Pyflakes
     "F",
@@ -106,6 +104,11 @@ max-complexity = 18
 
 [tool.ruff.isort]
 known-first-party = ["offsets_db_data"]
+combine-as-imports = true
+
+[tool.ruff.format]
+quote-style = "single"
+indent-style = "tab"
 
 [tool.pytest.ini_options]
 console_output_style = "count"
