--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/setup-python@v4
         name: Install Python
         with:
-          python-version: 3.9
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
@@ -51,7 +51,7 @@ jobs:
       - uses: actions/setup-python@v4
         name: Install Python
         with:
-          python-version: 3.10
+          python-version: '3.10'
       - uses: actions/download-artifact@v3
         with:
           name: releases
