--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -65,7 +65,7 @@ jobs:
         if: github.event_name == 'push'
         run: |
           python -m pip install --upgrade pip
-          python -m pip install dist/offsets-db-data*.whl
+          python -m pip install dist/offsets_db_data*.whl
           python -c "import offsets_db_data; print(offsets_db_data.__version__)"
 
   upload-to-pypi:
