--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 beautifulsoup4==4.12.2
 boto3==1.28.*
+brotli==1.1.0
 chardet==5.2.0
 country_converter==1.0.0
 fastparquet==2023.7.*
@@ -8,9 +9,9 @@ html5lib==1.1.*
 lxml==4.9.*
 openpyxl==3.1.*
 pandas==2.1.1
+pandera==0.17
 pydantic==1.10.*
 pyjanitor==0.23.*
 requests==2.31.0
 s3fs==2023.9.*
 universal_pathlib==0.1.3
-brotli==1.1.0
