--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 country_converter==1.0.0
-fastparquet>=2023.10.*
-fsspec>=2023.10.*
+fastparquet>=2023.10
+fsspec>=2023.10
 pandas==2.1.1
 pandera==0.17
 pydantic==1.10.*
 pyjanitor==0.23.*
 requests>=2.31.0
-s3fs>=2023.9.*
+s3fs>=2023.9
 universal_pathlib>=0.1.3
