--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -35,6 +35,16 @@ jobs:
           python-version: '3.10'
           cache: 'pip'
 
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+          python -m pip install -r requirements-dev.txt
+
       - name: Install package
         run: |
           python -m pip install .
+
+      - name: Run tests
+        run: |
+          python -m pytest
