--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -27,6 +27,13 @@ jobs:
         run: |
           sphinx-build docs docs/_build
 
+      - name: Upload artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: doc-logs
+          path: /tmp/*.log
+
       # - name: Deploy to GitHub Pages
       #   uses: peaceiris/actions-gh-pages@v3
       #   if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
