--- a/offsets_db_data/catalog.yaml
+++ b/offsets_db_data/catalog.yaml
@@ -100,25 +100,25 @@ sources:
       urlpath: 's3://carbonplan-offsets-db/raw/{{ date }}/art-trees/{{ transaction_type }}.csv.gz'
       storage_options: { 'anon': True }
 
-    raw_global_carbon_council_transactions:
-      description: Raw Global Carbon Council transactions data downloaded from the registries on a daily basis
-      driver: csv
-      parameters:
-        date:
-          description: date of the data to load
-          type: str
-          default: '2024-01-01'
-        transaction_type:
-          description: transaction type
-          type: str
-          default: 'issuances'
-          allowed:
-            - issuances
-            - retirements
-            - cancellations
-      args:
-        urlpath: 's3://carbonplan-offsets-db/raw/{{ date }}/global-carbon-council/{{ transaction_type }}.csv.gz'
-        storage_options: { 'anon': True }
+  raw_global_carbon_council_transactions:
+    description: Raw Global Carbon Council transactions data downloaded from the registries on a daily basis
+    driver: csv
+    parameters:
+      date:
+        description: date of the data to load
+        type: str
+        default: '2024-01-01'
+      transaction_type:
+        description: transaction type
+        type: str
+        default: 'issuances'
+        allowed:
+          - issuances
+          - retirements
+          - cancellations
+    args:
+      urlpath: 's3://carbonplan-offsets-db/raw/{{ date }}/global-carbon-council/{{ transaction_type }}.csv.gz'
+      storage_options: { 'anon': True }
 
   raw_american_carbon_registry_transactions:
     description: Raw American Carbon Registry transactions data downloaded from the registries on a daily basis
@@ -138,4 +138,24 @@ sources:
           - cancellations
     args:
       urlpath: 's3://carbonplan-offsets-db/raw/{{ date }}/american-carbon-registry/{{ transaction_type }}.csv.gz'
+      storage_options: { 'anon': True }
+
+  raw_climate_action_reserve_transactions:
+    description: Raw Climate Action Reserve transactions data downloaded from the registries on a daily basis
+    driver: csv
+    parameters:
+      date:
+        description: date of the data to load
+        type: str
+        default: '2024-01-01'
+      transaction_type:
+        description: transaction type
+        type: str
+        default: 'issuances'
+        allowed:
+          - issuances
+          - retirements
+          - cancellations
+    args:
+      urlpath: 's3://carbonplan-offsets-db/raw/{{ date }}/climate-action-reserve/{{ transaction_type }}.csv.gz'
       storage_options: { 'anon': True }
