Update pre-commit hooks and pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,9 @@ branch = true
 [tool.ruff]
 line-length = 100
 target-version = "py310"
+extend-include = ["*.ipynb"]
+
+
 builtins = ["ellipsis"]
 # Exclude a variety of commonly ignored directories.
 exclude = [
@@ -64,20 +67,27 @@ exclude = [
     ".direnv",
     ".eggs",
     ".git",
+    ".git-rewrite",
     ".hg",
+    ".ipynb_checkpoints",
     ".mypy_cache",
     ".nox",
     ".pants.d",
+    ".pyenv",
+    ".pytest_cache",
+    ".pytype",
     ".ruff_cache",
     ".svn",
     ".tox",
     ".venv",
+    ".vscode",
     "__pypackages__",
     "_build",
     "buck-out",
     "build",
     "dist",
     "node_modules",
+    "site-packages",
     "venv",
 ]
 per-file-ignores = {}
@@ -99,6 +109,7 @@ select = [
 ]
 
 
+
 [tool.ruff.lint.mccabe]
 max-complexity = 18
 
@@ -108,6 +119,7 @@ combine-as-imports = true
 
 [tool.ruff.format]
 quote-style = "single"
+docstring-code-format = true
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
