--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 country_converter==1.0.0
 fastparquet>=2023.10
 fsspec>=2023.10
+intake-parquet>=0.3.0
+intake<2
 pandas==2.1.1
 pandera==0.17
 pydantic==2.5.*
@@ -8,4 +10,3 @@ pyjanitor==0.23.*
 requests>=2.31.0
 s3fs>=2023.9
 universal_pathlib>=0.1.3
-intake-parquet>=0.3.0
